# zkvm-bench

./: .gitignore  README.md  witness-farm.sh
cli/: README.md  ethproofs  ethproofs-mock  ethproofs-pipeline.md  ethproofs-submit  ethproofs-verify  execute  gen-elf  gen-witness  guests.registry  install-vendors  prove-farm  reg.sh  report-schema.md  witness-farm  witness-farm-parallel
cli/vendor-patches/: openvm-eth.patch  openvm.patch  rsp.patch  stark-backend.patch
guests/: README.md
guests/monad/: README.md  ev.sh  monad-zkvm-guest-sp1.elf  monad-zkvm-guest-zisk.elf
guests/monad-sp1/: gen-inputs  monad-sp1.elf
guests/monad-zisk/: gen-inputs  monad-zisk.elf
guests/openvm-reth/: openvm-reth.commit
guests/rsp/: rsp.commit
guests/rsp/inputs/: README.md
guests/zisk-reth/: zisk-reth.commit
guests/zisk-reth/inputs/: README.md
infra/openvm-infra/: .gitignore  README.md  openvm-runner  run
infra/openvm-infra/cluster/: 00-install-once.sh  01-keygen.sh  README.md  fetch-runs.sh  prove-all.sh  stop.sh  submit.sh
infra/openvm-infra/docs/: openvm-benchmark.md  openvm-multigpu.md
infra/openvm-infra/patches/: README.md  applied-revs.txt  apply.sh
infra/openvm-infra/scripts/: core.sh  mint-witnesses.sh
infra/sp1-infra/: .gitignore  README.md  block-gas.csv  run
infra/sp1-infra/cluster-native/: 00-install-once.sh  02-fetch-binaries.sh  03-start.sh  04-build-runner.sh  README.md  _paths.sh  boot.sh  fetch-runs.sh  stop-workers.sh  stop.sh  submit-all.sh  submit.sh  sweep.sh
infra/sp1-infra/docs/: design.md  gas-distribution.md  guest-profile.md  optimisation-report.md  sp1-benchmark-16gpu-comparison.md  sp1-benchmark-synthesis.md  versions.md
infra/sp1-infra/guests/fibonacci/tools/: Cargo.toml
infra/sp1-infra/scripts/: README.md  block-cycles.py  core.sh  mint-inputs.sh  plot-gas.py  pull-block-gas.py  rpc-throttle.py
infra/sp1-infra/sp1-runner/: Cargo.toml  README.md
infra/sp1-infra/sp1-runner/src/: main.rs
infra/zisk-infra/: .gitignore  README.md  run  zisk-runner
infra/zisk-infra/cluster/: 00-install-once.sh  01-setup-elf.sh  README.md  (+9 more)
profiling/: CALLGRAPH-NOTES.md  README.md  hotspots.md  hotspots.py  results.py  template.html  ziskemu-callstack.patch
(+15 files in other folders)
